# mirage

./: .gitignore  CHANGELOG.md  README.md  index.html  main.py  meson.build  pyproject.toml  requirements.txt  snapcraft.yaml
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yml  codeql.yml  deploy-web.yml  flathub-build.yml  flatpak-multiarch.yml  flatpak-nightly.yml  flatpak-test.yml  python-quality.yml  release-drafter.yml  snap-edge.yml  snap-test.yml
assets/: index-CV5ra24b.js  index-DMrKNPoX.css
aurynk/: __init__.py  __main__.py  adb_controller.py  app.py  application.py  device_details_window.py  device_events.py  device_store.py  main.py  main_window.py  pairing_dialog.py
aurynk/core/: adb_manager.py  audio_stream.py  device_manager.py  pairing.py  scrcpy_runner.py
aurynk/dialogs/: pairing_dialog.py
aurynk/lib/: adb_controller.py  scrcpy_manager.py  tray_controller.py
aurynk/services/: __init__.py  audio_sender.py  device_monitor.py  tray_service.py  usb_monitor.py
aurynk/utils/: adb_utils.py  device_events.py  device_store.py  logger.py  notify.py  power.py  settings.py
aurynk/widgets/: qr_widget.py
aurynk/windows/: device_details_window.py  main_window.py
data/: com.aurynk.aurynk.appdata.xml  com.aurynk.aurynk.desktop.in  com.aurynk.aurynk.gresource.xml  com.yourdomain.aurynk.gresource.xml  com.yourdomain.mirage.gresource.xml  io.github.IshuSinghSE.aurynk.desktop.in  io.github.IshuSinghSE.aurynk.gresource.xml  io.github.IshuSinghSE.aurynk.metainfo.xml  meson.build  mirage.gresource  mirage.gresource.xml
data/desktop/: com.yourdomain.mirage.desktop
data/styles/: aurynk.css
data/ui/: main_window.ui
debian/: changelog  control  copyright  install  postinst  rules
flatpak/: com.yourdomain.aurynk.yml  com.yourdomain.mirage.yml  io.github.IshuSinghSE.aurynk.yml  python-dependencies.json
flatpak/modules/: libayatana-appindicator-gtk3-fixed.json
mirage/: adb_controller.py  device_details_window.py  main_window.py  scrcpy_manager.py
nightly/: index.html  summary  summary.idx
nightly/summaries/: 01adc38eb5fd016227ca70bb1af016275bb000ca135231d5544eaafc25bd530d-768d9e978c0c42f40e05ba67a8859e92b9fcfe52bc4110b4a75a3561b5274079.delta  09273985d7fcc4e5bb1c7f04db6569209f9b23476890454883e970219baa7a91-1c04f20c718f9de921d498c8ede7b5b722f4e09716469b2415a7616f815f29e8.delta  163d815e4a83b24f46eaee56501305f34d6f17f204487525a1b015a4777b8b3e-174b8a88b830f71c01bfe9f14803eaf1cb0e1a2d3b4cc2cc392c28b1223c60e2.delta  1af34bb9072e24dbb9737356cea1da106ffc5b69ccb4109260327454275ba8e2-fd91002e4c320300f3702e78e1b02df8ca6d16df33fe4ae17ad5bc1ef48060c1.delta  1f6ea167c44b455a0edd256ab0bfe19d1921571826e78c473b936dae0be32a41-1c04f20c718f9de921d498c8ede7b5b722f4e09716469b2415a7616f815f29e8.delta  3f45d59136a4be555776777b01278d6aeddce142a4c1cb0f25d9455fd59a1bca-c034549e936421b10cdb2dee97cce4185c5b7eba62779757bbc047188115395d.delta  447165155fae0a801438f6078c6138154cfc037c6e595fa7270eebad3c6b9dae-aeb6181218dad9593f67517b741222bc9c9623fc9747439e109d59755d8d95fd.delta  517ded51450b2367c26c56eb35f3ac0c8cc28fc6ddf4a3c0e698f0a1c69d598d-1c7a24abfeabcb2290dad6a6bf14ce17e999bf350c29440483a70d4341b38f22.delta  81bba3a12cbfbffce2b2a13b1aae71b206f378258bc217a39f448a34513f26d6-aeb6181218dad9593f67517b741222bc9c9623fc9747439e109d59755d8d95fd.delta  8e6d645cee3636465d45863a8d62bc1a446584016c2d259e5efd0f99d732c239-174b8a88b830f71c01bfe9f14803eaf1cb0e1a2d3b4cc2cc392c28b1223c60e2.delta  8f13104202456375db53105270562929290a79b1cae0d4b2248769338f7c1e16-fd91002e4c320300f3702e78e1b02df8ca6d16df33fe4ae17ad5bc1ef48060c1.delta  93217644d493a3744df63019f02980a82ba62d5b5e3b34fbe7a9d1966f1ebab0-768d9e978c0c42f40e05ba67a8859e92b9fcfe52bc4110b4a75a3561b5274079.delta  a18c60756f202eb75371b9cc56e2c89ce7c7221356b2022cfd4c9e6644c37a37-1c7a24abfeabcb2290dad6a6bf14ce17e999bf350c29440483a70d4341b38f22.delta  ac36c35e9ad199a797912410112d479a2c3ed5096874d402bd08ec97b005c99f-1c7a24abfeabcb2290dad6a6bf14ce17e999bf350c29440483a70d4341b38f22.delta  ad6c7cc841fa54875625184e5407b9a62f04f3f0e2ccb5ac3b74c752404f3ae1-74842173a64e522b702aad2f012b69892ce92fd21413a297094c76f2d7c22549.delta  c2989126f39745417f9fa13b95366ab4a6ead70692e665006ee6c71b932f2fee-c034549e936421b10cdb2dee97cce4185c5b7eba62779757bbc047188115395d.delta  ce3ef3b2154526a1c0d20067cc95c7235aac7b43fd6274356d12558ecb771f3d-5c8b328f7ce3e580ad262dd98f9a8989ee5ae88192ac98099cfcfcdd2bc24d2b.delta  d5f8ec328519e66e30953d035dbbc4c647a029564cc9c0ccff6463549d99a53d-74842173a64e522b702aad2f012b69892ce92fd21413a297094c76f2d7c22549.delta  e0a7abd5951d285c0e1ab9d030232ac1ebc9e466b32c4e9336e6bd8b0609f14a-768d9e978c0c42f40e05ba67a8859e92b9fcfe52bc4110b4a75a3561b5274079.delta  ed8d03ae5091cb626fc8f996b3769836e5df1c375369a5b3749a45713e060829-1c04f20c718f9de921d498c8ede7b5b722f4e09716469b2415a7616f815f29e8.delta  ed8fbaec85a246af33b47bd25d8042812cea065e22e80e20f1ef6a5228e28ee6-5c8b328f7ce3e580ad262dd98f9a8989ee5ae88192ac98099cfcfcdd2bc24d2b.delta  ee6f74bb34aea32a024eac39a57d5164944488b14bdfd04fd27b22562d6ea940-c034549e936421b10cdb2dee97cce4185c5b7eba62779757bbc047188115395d.delta  fcefed34ca80722074b51e72b540547dd1618bf7e50c1841e53f5b0b7fb00561-174b8a88b830f71c01bfe9f14803eaf1cb0e1a2d3b4cc2cc392c28b1223c60e2.delta
po/: LINGUAS  POTFILES  aurynk.pot  en.po  es.po  fr.po  hi.po  ja.po  ko.po  meson.build  readme_zh_CN.po  ru.po
scripts/: aurynk_tray.py  changelog_to_debian.py  changelog_to_metainfo.py  mirage  publish-flathub.sh  publish-release.sh
snap/: snapcraft.yaml
src/: __init__.py  main.py  window.py
src/lib/: adb_pairing.py
src/ui/: constants.py  dashboard.py  pairing_dialog.py  qr_widget.py
tests/: test_adb_manager.py  test_audio_stream.py  test_device_monitor.py  test_pairing.py  test_scrcpy_runner.py  test_scrcpy_runner_stress.py  test_settings_manager.py  test_settings_window.py  test_ssl_context.py  test_usb_monitor.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  config.js
(+99 files in other folders)
